feat: preinstall Shennong R toolchain
